--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,8 @@
     <title>React App </title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-   
+    
+    <div id="root" defer></div>
+   <canvas class ="webgl" defer></canvas>
   </body>
 </html>
