Added Particle effect and text animation

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,8 @@
     <title>React App </title>
   </head>
   <body>
+    <section></section>
+
     
     <div id="root" defer></div>
    <canvas class ="webgl" defer></canvas>
