--- a/public/index.html
+++ b/public/index.html
@@ -13,10 +13,10 @@
     
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
-    <title>React App </title>
+    <title>React App </title><canvas class ="webgl" defer></canvas>
   </head>
   <body>
     <div id="root" defer></div>
-   <canvas class ="webgl" defer></canvas>
+   
   </body>
 </html>
